deploynginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: 
    type: RollingUpdate
  template:
    metadata:
     
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: ng0-volume
          mountPath: /etc/nginx/conf.d/
    
      volumes:
      - name: ng0-volume
        persistentVolumeClaim:
          claimName: nginxpvc
