deployredis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
    
  strategy: 
    type: RollingUpdate
  template:
    metadata:
     
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
        command: ["redis-server", "/redis-master/redis.conf"]
        volumeMounts:
        - name: data
          mountPath: /redis-master-data
        - name: config
          mountPath: /redis-master  
      volumes:
      - name: data
        emptyDir: {}
      - name: config
        configMap:
          name: redis-cm
          items:
          - key: redis-config
            path: redis.conf
