service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 8888
    targetPort: 80
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: back0
spec:
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: front0
spec:
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 3000
  type: NodePort
