ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: default
spec:
  rules:
  - host: ecommerce.com
    http:
      paths:
      - path: /
        pathType: Prefix      
        backend:
          service:
            name: nginx
            port: 
              number: 80
      - path: /api/hostname
        pathType: Prefix
        backend:
          service:
            name: back0
            port: 
              number: 8000
  - host: frontend.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front0
            port: 
              number: 3000
